# Kurveball

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  architecture.txt  build-clang.bat  build.bat  names.txt  notes.txt  purge.bat  roadmap.md
Dependencies/: cmake_install.cmake
Examples/CurveEditor/: CMakeLists.txt  CurveEditor.cpp  CurveEditor.h  glfw.c
Examples/CurveEditor/Dependencies/: implot.cpp
Examples/UnrealCurveDemo/: .gitignore  BuildUnreal.bat  CurveDemo.uproject  build.sh  fixNugetError.bat  purge.bat  purge.sh
Examples/UnrealCurveDemo/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Examples/UnrealCurveDemo/Content/: MovingProp.uasset  PipeMesh.uasset  SM_BlackPlane.uasset  SM_Pipe.uasset
Examples/UnrealCurveDemo/Content/Blueprints/: BP_BuoyancyComponent.uasset  BP_BuoyancyVolume.uasset  BP_CameraControl.uasset  BP_GrappleHook.uasset  BP_KillPlaneComponent.uasset  BP_MovingPropComponent.uasset  BP_PossessionComponent.uasset  BP_Rope.uasset  KillPlaneComponent.uasset  MovingPropComponent.uasset
Examples/UnrealCurveDemo/Content/Characters/: BP_CharacterPawn.uasset  BP_Speedboat.uasset  GrappleInterface.uasset  I_GrappleInterface.uasset  SM_Speedboat.uasset  cat_boat.uasset  cat_boat_Blueprint.uasset
Examples/UnrealCurveDemo/Content/Characters/Mannequins/Anims/Unarmed/: ABP_Unarmed.uasset  BS_Idle_Walk_Run.uasset
Examples/UnrealCurveDemo/Content/Input/: IMC_Default.uasset
Examples/UnrealCurveDemo/Content/Input/Actions/: IA_BoatTurn.uasset  IA_BrakePedal.uasset  IA_Dash.uasset  IA_GasPedal.uasset  IA_Grapple.uasset  IA_Zoom.uasset
Examples/UnrealCurveDemo/Content/LevelPrototyping/: Lvl_ThirdPerson.umap
Examples/UnrealCurveDemo/Content/LevelPrototyping/Materials/: M_FlatCol.uasset
Examples/UnrealCurveDemo/Content/Materials/: BaseMaterial.uasset  BlackMaterial.uasset  HighlightMaterial.uasset  M_Base.uasset  M_Black.uasset  M_Highlight.uasset  M_Speedboat.uasset  WaterMaterial.uasset  WaterParticleMask.uasset  cat_boat_skin_02.uasset  cat_boat_skin_02_Mat.uasset  noise_gaussian.uasset  noise_perlin.uasset  water.uasset
Examples/UnrealCurveDemo/Content/Mechanics/: BoatBrakeMechanic.uasset  BoatBuoyancyMechanic.uasset  BoatGasMechanic.uasset  BoatTurnDecelerationMechanic.uasset  BoatTurnMechanic.uasset  DashMechanic.uasset  GrappleFireMechanic.uasset  GrapplePullMechanic.uasset  GravityMechanic.uasset  JumpMechanic.uasset  MantleMechanic.uasset  RunMechanic.uasset  StrafeMechanic.uasset  TurnMechanic.uasset  cat_boat.uasset
Examples/UnrealCurveDemo/Content/ThirdPerson/: Lvl_ThirdPerson.umap  MI_ThirdPersonColWay.uasset
Examples/UnrealCurveDemo/Content/ThirdPerson/Blueprints/: BP_ThirdPersonCharacter.uasset  BP_ThirdPersonGameMode.uasset  BP_ThirdPersonPlayerController.uasset
Examples/UnrealCurveDemo/Content/VFX/: NS_WaterSpray.uasset  WaterSpray.uasset
Examples/UnrealCurveDemo/Content/VelocityCurves/: BoatBrake.uasset  BoatBuoyancy.uasset  BoatCosmeticPitch.uasset  BoatCosmeticRoll.uasset  BoatCosmeticYaw.uasset  BoatGas.uasset  BoatPitch.uasset  BoatRoll.uasset  BoatTurn.uasset  BoatTurnDeceleration.uasset  ConstantSpeed.uasset  Dash.uasset  GrappleFire.uasset  GrapplePull.uasset  Gravity.uasset  Jump.uasset  Mantle.uasset  NegativeCurveTest.uasset  OutAndBack.uasset  Run.uasset  Turn.uasset
Examples/UnrealCurveDemo/Plugins/CurvePlugin/: CurvePlugin.uplugin
Examples/UnrealCurveDemo/Plugins/CurvePlugin/Source/CurvePluginEditor/: CurvePluginEditor.Build.cs
Examples/UnrealCurveDemo/Plugins/CurvePlugin/Source/CurvePluginEditor/Private/: CurvePluginEditor.cpp  (+1 more)
Examples/UnrealCurveDemo/Plugins/KurveballPlugin/: KurveballPlugin.uplugin
Examples/UnrealCurveDemo/Plugins/KurveballPlugin/Source/KurveballPluginEditor/: KurveballPluginEditor.Build.cs
Examples/UnrealCurveDemo/Plugins/KurveballPlugin/Source/KurveballPluginRuntime/: KurveballPluginRuntime.Build.cs
Examples/UnrealCurveDemo/Source/: CurveDemo.Target.cs  CurveDemoEditor.Target.cs  LICENSE.txt
Examples/UnrealCurveDemo/Source/CurveDemo/: .gitignore  CurveDemo.Build.cs  CurveDemo.cpp  CurveDemo.h  CurveDemoCameraManager.cpp  CurveDemoCameraManager.h  CurveDemoCharacter.cpp  CurveDemoCharacter.h  CurveDemoGameMode.cpp  CurveDemoGameMode.h  CurveDemoPlayerController.cpp  CurveDemoPlayerController.h
Examples/godot-curve-demo/: ATTRIBUTIONS.md  icon.svg.import  project.godot
Examples/godot-curve-demo/Sprites/: CharacterFall.png.import  CharacterIdleAndWalk.png.import  CharacterJump.png.import  CharacterRoll.png.import  LevelTiles.png.import
Scripts/: PrependLicense.sh  SingleInclude.json  SingleIncludeUnreal.json  amalgamate.py  purge.bat  release.bat
Source/: AreaAccumulator.cpp  AreaAccumulator.h  Asserts.h  Axis.h  AxisMode.h  BezierCurve.cpp  BezierCurve.h  BezierCurve.inl  BezierCurveSegment.h  BezierCurveSegment.inl  BlendType.h  CircularBuffer.h  CircularBuffer.inl  ContainerTypes.h  ContainerUtils.h  CoordinateSpace.h  CurveInstanceId.h  CurveLibAll.cpp  CurveLibAll.h  CurveMap.h  CurveMechanic.h  CurveSampler.h  CurveSampler3D.h  IntegratorFunctionType.h  IntegratorFunctions.h  IntegratorFunctions.inl  KurveballAll.cpp  KurveballAll.h  LookupTable.h  LookupTable.inl  MathUtils.cpp  MathUtils.h  TestUtils.h  UnitTypes.h  Vector2.h  Vector3.h  Vector3.inl  VelocityCurveApi.cpp  VelocityCurveApi.h  VelocityCurveContext.h  (+4 more)
Source/GodotWrapper/: CMakeLists.txt  RegisterTypes.cpp  VelocityCurveComponent.cpp  VelocityCurveComponent.h
Source/UnrealWrapper/: CurveLibLog.cpp  CurveLibLog.h  EAxisMode.h  EBlendType.h  ECoordinateSpace.h  KurveballLog.cpp  KurveballLog.h  UCurveMechanic.cpp  UCurveMechanic.h  USensorComponent.cpp  USensorComponent.h  UVelocityCurveComponent.cpp  UVelocityCurveComponent.h  UVelocityCurveDebugger.cpp  UVelocityCurveDebugger.h  UnrealUtils.cpp  UnrealUtils.h
Tests/: .gitignore  AreaAccumulatorTest.cpp  BezierCurveSegmentTest.cpp  CMakeLists.txt  Vector2Test.cpp  VelocityCurvePlaybackTest.cpp
examples/CurveEditor/: CMakeLists.txt
examples/CurveEditor/backends/: imgui_impl_glfw.cpp
examples/CurveEditor/glad/: glad_gl.c
(+44 files in other folders)
